<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/edUserInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_hint"
    android:layout_margin="16dp"
    android:minHeight="48dp"
    android:padding="12dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />


    <Spinner
        android:id="@+id/ddSelection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/edUserInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Mygtukas skaičiavimui -->
    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_calculate_caption"
    android:onClick="btnCalculateOnClick"
    app:layout_constraintTop_toBottomOf="@+id/ddSelection"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

    <!-- Rezultato išvedimo tekstas -->
    <TextView
        android:id="@+id/tvOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_text"
    android:textSize="18sp"
    android:layout_marginTop="16dp"
    app:layout_constraintTop_toBottomOf="@+id/btnCalculate"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
